Fathym setup and configured GitHub action

--- a/.github/workflows/lcu-plasmic-github-artifact-release.yml
+++ b/.github/workflows/lcu-plasmic-github-artifact-release.yml
@@ -18,7 +18,7 @@ env:
   NPMRegistry: https://registry.npmjs.org/
   InstallCommand: npm ci
   BuildCommand: npm run build
-  Output: ./public
+  Output: ./
 
 jobs:
   build:
